# DeepMemEval

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  evaluate.py  pyproject.toml  requirements.txt  run_deepmemeval.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
adapters/: __init__.py  chromadb_baseline.py
data/: README.md  deepmemeval_500.json  deepmemeval_sample.json
dataset_generation/: README.md  generate_personas.py  generate_sample.py  personas.py
docs/: dataset-spec.md  methodology.md
results/: .gitkeep
src/: __init__.py  adapter.py  prompts.py
tests/: test_adapter.py  test_dataset.py  test_generation.py  test_harness.py
